add lplace to query constructor