@@ -40,19 +40,35 @@ public class QueryConstructorTest {
         Assertions.assertEquals(correctString, query);
     }
 
-    // TODO: Tests for timestamps
+    // Tests for timestamps
     @Test
-    public void testTimestamps(){
-        List<String> text = new ArrayList<>(Arrays.asList("hest"));
-        String correctString = "hest AND py:[1740 TO 1750]";
-        String query = QueryConstructor.constructQuery(text, null, 1740, 1750, null, null);
+    public void testStartYear(){
+        List<String> text = new ArrayList<>(List.of("hest"));
+        String correctString = "hest AND py:[1740 TO *]";
+        String query = QueryConstructor.constructQuery(text, null, 1740, null, null, null);
         Assertions.assertEquals(correctString, query);
     }
 
-    // TODO: Tests for familyId
+    @Test
+    public void testEndYear(){
+        List<String> text = new ArrayList<>(List.of("hest"));
+        String correctString = "hest AND py:[* TO 1840]";
+        String query = QueryConstructor.constructQuery(text, null, null, 1840, null, null);
+        Assertions.assertEquals(correctString, query);
+    }
+
+    @Test
+    public void testBothYears(){
+        List<String> text = new ArrayList<>(List.of("hest"));
+        String correctString = "hest AND py:[1790 TO 1840]";
+        String query = QueryConstructor.constructQuery(text, null, 1790, 1840, null, null);
+        Assertions.assertEquals(correctString, query);
+    }
+
+    // Tests for familyId
     @Test
     public void testSingleFamilyId(){
-        List<String> familyId = new ArrayList<>(Arrays.asList("testAvis"));
+        List<String> familyId = new ArrayList<>(List.of("testAvis"));
         String correctString = "familyId:testAvis";
         String query = QueryConstructor.constructQuery(null, null, null, null, familyId, null);
         Assertions.assertEquals(correctString, query);
@@ -66,6 +82,31 @@ public class QueryConstructorTest {
         Assertions.assertEquals(correctString, query);
     }
 
-    // TODO: Tests for lplace
+    // Tests for lplace
+    @Test
+    public void testSingleLplace(){
+        List<String> lplace = new ArrayList<>(List.of("aarhus"));
+        String correctString = "lplace:aarhus";
+        String query = QueryConstructor.constructQuery(null, null, null, null, null, lplace);
+        Assertions.assertEquals(correctString, query);
+    }
+
+    @Test
+    public void testMultipleLplace(){
+        List<String> lplace = new ArrayList<>(Arrays.asList("aarhus", "aalborg", "viborg"));
+        String correctString = "lplace:(aarhus OR aalborg OR viborg)";
+        String query = QueryConstructor.constructQuery(null, null, null, null, null, lplace);
+        Assertions.assertEquals(correctString, query);
+    }
+
+    @Test
+    public void testFamilyIdAndLplace(){
+        List<String> familyId = new ArrayList<>(Arrays.asList("testAvis", "andenAvis", "tredjeAvis"));
+        List<String> lplace = new ArrayList<>(Arrays.asList("aarhus", "aalborg", "viborg"));
+        String correctString = "familyId:(testAvis OR andenAvis OR tredjeAvis) AND lplace:(aarhus OR aalborg OR viborg)";
+
+        String query = QueryConstructor.constructQuery(null, null, null, null, familyId, lplace);
+        Assertions.assertEquals(correctString, query);
+    }
 
 }
